tests/models/enum/named/u128/pass/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(ge = 2)]
        value: u128
    },
}
fn main() {}
